logging level for spring cloud

--- a/application.properties
+++ b/application.properties
@@ -16,6 +16,7 @@ server.port=8089
 logging.file=C:/data/mytests/springboot_ws.txt
 logging.level.com.example.springboot: DEBUG
 logging.level.org.springframework.web: DEBUG
+logging.level.org.springframework.cloud: DEBUG
 logging.level.org.hibernate: ERROR
 
 datasource.url=jdbc:postgresql://localhost:5432/teststore
